center align fix

--- a/_assets/stylesheets/layout.scss
+++ b/_assets/stylesheets/layout.scss
@@ -3,6 +3,7 @@
 
 .container {
 	max-width: $content-max-width;
+	margin: 0 auto;
 	@include clearfix();
 }
 
